methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:1: error: ':' expected but '(' found.
def growFlowers(twoflowers(Color.red , Color.cyan);droite();avance();avance();droite();avance();avance();flower(Color.orange);for (1 to 3){recule();};droite();avance();avance();droite(); twoflowers(Color.pink , Color.green);)
                          ^FlowerPot:1: error: identifier expected but ';' found.
def growFlowers(twoflowers(Color.red , Color.cyan);droite();avance();avance();droite();avance();avance();flower(Color.orange);for (1 to 3){recule();};droite();avance();avance();droite(); twoflowers(Color.pink , Color.green);)
                                                  ^FlowerPot:1: error: '<-' expected but ')' found.
def growFlowers(twoflowers(Color.red , Color.cyan);droite();avance();avance();droite();avance();avance();flower(Color.orange);for (1 to 3){recule();};droite();avance();avance();droite(); twoflowers(Color.pink , Color.green);)
                                                                                                                                         ^FlowerPot:9: error: illegal start of simple expression
}
^