methods.flowerpot.FlowerPot.scala.code
def growFlowers(twoflowers(Color.red , Color.cyan);droite();avance();avance();droite();avance();avance();flower(Color.orange);for (1 to 3){recule();};droite();avance();avance();droite(); twoflowers(Color.pink , Color.green);)


def flower(p:Color){setCouleurBrosse(p);baisseBrosse();avance();avance();recule();gauche(); avance(); recule();recule();avance();setCouleurBrosse(Color.yellow); baisseBrosse();leveBrosse();droite();}

def twoflowers(p:Color,c:Color)
{flower(p);avance();avance();avance();flower(c);for (i<-1 to 5){recule();};}